tests/fixtures/invalid/pow_set_list_int.py
# Cannot call pow() with Set[int], List[int], Int
x = pow({1, 2, 3}, [1, 2, 3], 1)
